[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "moatless"
version = "0.0.12"
description = ""
authors = [ "Albert Örwall <albert@moatless.ai>",]
readme = "README.md"

[tool.poetry.scripts]
moatless-api = "moatless.api:run_api"
build-ui = "build_ui:main"

[tool.ruff]
target-version = "py310"
extend-exclude = [ "tests", "evaluations", "notebooks",]
line-length = 120

[tool.poetry.dependencies]
python = ">=3.10,<3.13" 
# moatless-testbeds = "^0.0.17"

pydantic = "^2.8.2"
tiktoken = "^0.8.0"
networkx = "^3.3"
tree-sitter = "0.24.0"
tree-sitter-python = "0.23.6"
tree-sitter-java = "0.23.5"
rapidfuzz = "^3.9.5"
gitpython = "^3.1.43"
unidiff = "^0.7.5"
python-dotenv = "1.0.1"
docstring-parser = "^0.16"

# OpenTelemetry
opentelemetry-api = "^1.30.0"
opentelemetry-sdk = "^1.30.0"
opentelemetry-exporter-otlp = "^1.30.0"
opentelemetry-instrumentation = "^0.51b0"
opentelemetry-instrumentation-fastapi = "^0.51b0"

numpy = "^1.0"
pylint = "^3.2.6"

# For LLM integrations

# !!! Use this to able to use Claude's computer use tool types https://github.com/BerriAI/litellm/pull/7805
litellm = { git = "https://github.com/aorwall/litellm.git", branch = "anthropic-tool-cache" }
#litellm = "^1.63.12"

instructor = "<=1.6.3"
rq = "^2.1.0"

openai = "^1.41.0"
anthropic = "^0.49.0"

botocore = "^1.35.54"
boto3 =  "^1.35.54"
aioboto3 = "^14.1.0"
kubernetes = "^32.0.0"
kubernetes-asyncio = "^32.0.0"

# azure
azure-storage-blob = "^12.25.0"

# Vector Index
llama-index = "^0.12.11"
llama-index-embeddings-openai = "^0.3.1"
llama-index-embeddings-voyageai = "^0.3.4"
llama-index-readers-file = "^0.4.3"
faiss-cpu = "^1.8.0.post1"
voyageai = "^0.3.2"

filelock = "^3.16.1"

# Image and PDF handling
Pillow = "^11.1.0"
pymupdf = "^1.25.1"

aiofiles = "^24.1.0"
swebench = "^3.0.15"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.2"
pytest-mock = "3.14.0"
mypy = "1.15.0"
ruff = "0.5.5"
pytest-asyncio = "^0.25.3"
