[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "moatless"
version = "0.1.1"
description = ""
readme = "README.md"

authors = [
    {name = "Albert Örwall", email = "albert@moatless.ai"},
]
requires-python = "<3.14,>=3.10"
dependencies = [
    "pydantic<3.0.0,>=2.11.7",
    "tiktoken<2.0.0,>=0.11.0",
    "networkx<4.0,>=3.4",
    "tree-sitter<1.0.0,>=0.24.0",
    "tree-sitter-python<1.0.0,>=0.23.6",
    "tree-sitter-java<1.0.0,>=0.23.5",
    "rapidfuzz<4.0.0,>=3.13.0",
    "gitpython<4.0.0,>=3.1.45",
    "unidiff<1.0.0,>=0.7.5",
    "python-dotenv<2.0.0,>=1.0.1",
    "docstring-parser<1.0,>=0.17.0",
    "litellm<2.0.0,>=1.75.5.post1",
    "openai<2.0.0,>=1.99.9",
    "anthropic<1.0.0,>=0.62.0",
    "llama-index<2.0.0,>=0.13.1",
    "llama-index-embeddings-openai<1.0.0,>=0.5.0",
    "llama-index-embeddings-voyageai<1.0.0,>=0.4.1",
    "llama-index-readers-file<1.0.0,>=0.5.0",
    "faiss-cpu<2.0.0.0,>=1.11.0.post1",
    "voyageai<1.0.0,>=0.3.4",
    "filelock<4.0.0,>=3.18.0",
    "aiofiles<25.0.0,>=24.1.0",
    "swebench<4.0.0,>=3.0.17",
    "opentelemetry-sdk<2.0.0,>=1.36.0",
    "sqlalchemy>=2.0.43",
    "psycopg2-binary>=2.9.10",
    "redis<6.0.0,>=5.3.1",
    "gunicorn>=23.0.0",
    "opentelemetry-api<2.0.0,>=1.36.0",
    "opentelemetry-exporter-otlp<2.0.0,>=1.36.0",
    "opentelemetry-instrumentation<1.0,>=0.57b0",
    "opentelemetry-instrumentation-fastapi<1.0,>=0.57b0",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "botocore<2.0.0,>=1.37.3",
    "boto3<2.0.0,>=1.37.3",
    "aioboto3<15.0.0,>=14.3.0",
    "kubernetes<33.0.0,>=32.0.1",
    "kubernetes-asyncio<33.0.0,>=32.3.2",
    "azure-storage-blob<13.0.0,>=12.26.0",
    "azure-monitor-opentelemetry<2.0.0,>=1.6.13",
]

[dependency-groups]
dev = [
    "pytest<9.0.0,>=8.3.2",
    "pytest-mock<4.0.0,>=3.14.0",
    "pytest-asyncio<1.0.0,>=0.25.3",
    "mypy<2.0.0,>=1.15.0",
    "ruff<1.0.0,>=0.5.5",
    "pylint<4.0.0,>=3.2.6",
    "ipykernel<7.0.0,>=6.29.5",
]

[tool.uv]
override-dependencies = [
    "llama-parse; sys_platform == 'never'",
]

[tool.ruff]
target-version = "py310"
extend-exclude = [ "tests", "evaluations", "notebooks",]
line-length = 120
